--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -8,10 +8,10 @@
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('UserID')" style="width: 20%;"> Id </th>
-          <th (click)="sort('user_name')" style="width: 20%;"> Users </th>
-          <th (click)="sort('CompanyID')" style="width: 20%;"> Company Id </th>
-          <th (click)="sort('CompanyName')" style="width: 20%;"> Company Name </th>
+          <th class="curser-point" (click)="sort('UserID')" style="width: 20%;"> Id </th>
+          <th class="curser-point" (click)="sort('user_name')" style="width: 20%;"> Users </th>
+          <th class="curser-point" (click)="sort('CompanyID')" style="width: 20%;"> Company Id </th>
+          <th class="curser-point" (click)="sort('CompanyName')" style="width: 20%;"> Company Name </th>
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
@@ -25,8 +25,8 @@
             <td style="width: 20%;">{{item.CompanyID}}</td>
             <td style="width: 20%;">{{item.CompanyName}}</td>
             <td class="btn-wrap">
-              <span class="material-icons" (click)="openEdit(item)"> edit </span>
-              <span class="material-icons" (click)="openDelete(item)"> delete </span>
+              <span class="material-icons curser-point" (click)="openEdit(item)"> edit </span>
+              <span class="material-icons curser-point" (click)="openDelete(item)"> delete </span>
             </td>
           </tr>
         </tbody>
