--- a/src/app/featured/dashbord/component/currency/currency.component.html
+++ b/src/app/featured/dashbord/component/currency/currency.component.html
@@ -14,10 +14,10 @@
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th style="width: 15%;" (click)="sort('id')"> Id </th>
-          <th style="width: 20%;" (click)="sort('CurrencyName')"> Name </th>
-          <th style="width: 15%;" (click)="sort('CurrencySymbol')"> Symbol </th>
-          <th style="width: 20%;" (click)="sort('CurrencyUnit')"> Unit </th>
+          <th class="curser-point" style="width: 15%;" (click)="sort('id')"> Id </th>
+          <th class="curser-point" style="width: 20%;" (click)="sort('CurrencyName')"> Name </th>
+          <th class="curser-point" style="width: 15%;" (click)="sort('CurrencySymbol')"> Symbol </th>
+          <th class="curser-point" style="width: 20%;" (click)="sort('CurrencyUnit')"> Unit </th>
           <th style="width: 20%;"> Operation</th>
         </tr>
       </thead>
@@ -31,8 +31,8 @@
             <td style="width: 15%;">{{item.CurrencySymbol}}</td>
             <td style="width: 20%;">{{item.CurrencyUnit}}</td>
             <td style="width: 20%;">
-              <span class="material-icons" (click)="openEdit(item)"> edit </span>
-              <span class="material-icons" (click)="openDelete(item)"> delete </span>
+              <span class="material-icons curser-point" (click)="openEdit(item)"> edit </span>
+              <span class="material-icons curser-point" (click)="openDelete(item)"> delete </span>
             </td>
           </tr>
         </tbody>
