--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
@@ -97,7 +97,8 @@
                             </div>
                             <div class="col col-sm-5 file-upload-wrap">
                                 <label class="btn-upload">
-                                    <input type="file" name="fileupload" (change)="fileProgress($event)">
+                                    <input type="file" name="fileupload" (change)="fileProgress($event)"
+                                        accept="image/*">
                                     <img class="btn" [src]="imgUrl">
                                 </label>
                                 <p class="file-name" *ngIf="imageName">{{imageName}}</p>
