--- a/src/app/featured/dashbord/component/popups/add-location-popup/add-location-popup.component.scss
+++ b/src/app/featured/dashbord/component/popups/add-location-popup/add-location-popup.component.scss
@@ -11,3 +11,8 @@
     background-size: 23px;
     background-position: 50%;
 }
+.table-wrap .table-bordered th,.table-wrap .table-bordered tr{
+    background: #fff;
+    color: #444;
+}
+
