--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -15,12 +15,12 @@
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('id')" style="width: 10%;">Id </th>
-          <th (click)="sort('user_name')" style="width: 20%;">Name </th>
-          <th (click)="sort('companyid')" style="width: 10%;">Company </th>
-          <th (click)="sort('email')" style="width: 20%;">Email </th>
-          <th (click)="sort('password')" style="width: 10%;">Password </th>
-          <th (click)="sort('status')" style="width: 10%;">Status </th>
+          <th class="curser-point" (click)="sort('id')" style="width: 10%;">Id </th>
+          <th class="curser-point" (click)="sort('user_name')" style="width: 20%;">Name </th>
+          <th class="curser-point" (click)="sort('companyid')" style="width: 10%;">Company </th>
+          <th class="curser-point" (click)="sort('email')" style="width: 20%;">Email </th>
+          <th class="curser-point" (click)="sort('password')" style="width: 10%;">Password </th>
+          <th class="curser-point" (click)="sort('status')" style="width: 10%;">Status </th>
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
@@ -38,8 +38,8 @@
               {{item.status==0?'Suspended':'Active'}}
             </td>
             <td style="width: 20%;">
-              <span class="material-icons" (click)="openEdit(item)"> edit </span>
-              <span class="material-icons" (click)="openDelete(item)"> delete </span>
+              <span class="material-icons curser-point" (click)="openEdit(item)"> edit </span>
+              <span class="material-icons curser-point" (click)="openDelete(item)"> delete </span>
             </td>
           </tr>
         </tbody>
