--- a/src/app/featured/dashbord/component/details-popups/company-details/company-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/company-details/company-details.component.html
@@ -1,6 +1,6 @@
 <ng-template #addUserModal let-modal>
   <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
-    <div class="main-popup currency-popup">
+    <div class="currency-popup">
       <!-- <div class="modal-dialog"> -->
       <div class="modal-content modal-content-area modal-lg">
 
@@ -8,7 +8,8 @@
         <div class="modal-header">
           <span class="material-icons"> list </span>
           <h4 class="modal-title">Company</h4>
-          <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
+          <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+          </span>
         </div>
 
         <!-- Modal body -->
