--- a/src/app/featured/dashbord/component/details-popups/cost-center-access/cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/details-popups/cost-center-access/cost-center-access.component.html
@@ -4,10 +4,11 @@
       <div class="modal-content modal-content-area modal-md">
 
         <!-- Modal Header -->
-        <div class="modal-header main-popup">
+        <div class="modal-header">
           <span class="material-icons"> list </span>
           <h4 class="modal-title">COST CENTER ACCESS</h4>
-          <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
+          <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+          </span>
         </div>
 
         <!-- Modal body -->
