--- a/src/app/shared/components/add-popup/add-popup.component.html
+++ b/src/app/shared/components/add-popup/add-popup.component.html
@@ -2,10 +2,11 @@
 <ng-template #addModal let-modal>
   <!-- Modal Header -->
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
-    <div class="modal-header main-popup">
+    <div class="modal-header">
       <span class="material-icons"> list </span>
       <h4 class="modal-title">{{header}}</h4>
-      <img class="btn-close" src="../assets/img/close-icon.svg" (click)="popupClose()" />
+      <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+      </span>
     </div>
     <!-- Modal body -->
     <div class="modal-body">
