--- a/src/app/shared/components/delete-popup/delete-popup.component.html
+++ b/src/app/shared/components/delete-popup/delete-popup.component.html
@@ -1,8 +1,9 @@
 <ng-template #deleteModal let-modal>
-  <div class="modal-header main-popup">
+  <div class="modal-header ">
     <span class="material-icons"> list </span>
     <h4 class="modal-title" id="modal-title">{{deleteItem.header}}</h4>
-    <img class="btn-close" src="../assets/img/close-icon.svg" (click)="popupClose()" />
+    <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+    </span>
   </div>
   <div class="modal-body">
     <p><strong>{{deleteItem.message}}</strong></p>
