--- a/src/app/featured/dashbord/component/details-popups/chain-details/chain-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/chain-details/chain-details.component.html
@@ -1,7 +1,7 @@
 <!-- edit popup -->
 <ng-template #addUserModal let-modal>
   <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
-    <div class="main-popup currency-popup">
+    <div class="currency-popup">
       <!-- <div class="modal-dialog"> -->
       <div class="modal-content modal-content-area modal-lg">
         <div class="add-chain-popup">
@@ -11,7 +11,8 @@
               list
             </span>
             <h4 class="modal-title">CHAIN</h4>
-            <img class="btn-close" src="../assets/img/close-icon.svg" (click)="popupClose()">
+            <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+            </span>
           </div>
           <!-- Modal body -->
           <div class="modal-body">
