--- a/src/app/featured/dashbord/component/details-popups/currency-details/currency-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/currency-details/currency-details.component.html
@@ -1,13 +1,14 @@
 <ng-template #addUserModal let-modal>
   <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
-    <div class="main-popup currency-popup">
+    <div class="currency-popup">
       <div class="modal-content modal-content-area modal-md">
 
         <!-- Modal Header -->
         <div class="modal-header">
           <span class="material-icons"> list </span>
           <h4 class="modal-title">CURRENCY</h4>
-          <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
+          <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+          </span>
         </div>
 
         <!-- Modal body -->
