--- a/src/app/featured/dashbord/component/details-popups/location-details/location-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/location-details/location-details.component.html
@@ -1,6 +1,6 @@
 <ng-template #addUserModal let-modal>
   <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
-    <div class="main-popup location-popup">
+    <div class="location-popup">
       <div class="modal-content modal-content-area modal-xl">
 
         <!-- Modal Header -->
@@ -9,7 +9,8 @@
             list
           </span>
           <h4 class="modal-title">LOCATION</h4>
-          <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
+          <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+          </span>
         </div>
 
         <!-- Modal body -->
