--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
@@ -1,7 +1,7 @@
 <!-- edit popup -->
 <ng-template #addUserModal let-modal>
     <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
-        <div class="main-popup currency-popup">
+        <div class="currency-popup">
             <!-- <div class="modal-dialog"> -->
             <div class="modal-content modal-content-area modal-lg">
                 <div class="add-chain-popup">
@@ -10,7 +10,9 @@
                         <span class="material-icons"> list </span>
                         <h6 class="modal-title" *ngIf="!isEdit">ADD CHAIN</h6>
                         <h6 class="modal-title" *ngIf="isEdit">EDIT CHAIN</h6>
-                        <img class="btn-close" src="../assets/img/close-icon.svg" (click)="popupClose()">
+                        <!--  -->
+                        <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+                        </span>
                     </div>
                     <!-- Modal body -->
                     <div class="modal-body">
