--- a/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
@@ -1,6 +1,6 @@
 <ng-template #addUserModal let-modal>
     <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
-        <div class="main-popup currency-popup">
+        <div class="currency-popup">
             <!-- <div class="modal-dialog"> -->
             <div class="modal-content modal-content-area modal-lg">
 
@@ -9,7 +9,8 @@
                     <span class="material-icons"> list </span>
                     <h4 class="modal-title" *ngIf="isEdit">Edit Company</h4>
                     <h4 class="modal-title" *ngIf="!isEdit">Add Company</h4>
-                    <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
+                    <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+                    </span>
                 </div>
 
                 <!-- Modal body -->
