--- a/src/app/featured/dashbord/component/popups/add-currency-popup/add-currency-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-currency-popup/add-currency-popup.component.html
@@ -1,6 +1,6 @@
 <ng-template #addUserModal let-modal>
     <form (ngSubmit)="onSubmit()" [formGroup]="addUserForm">
-        <div class="main-popup currency-popup">
+        <div class="currency-popup">
             <div class="modal-content modal-content-area modal-md">
 
                 <!-- Modal Header -->
@@ -8,7 +8,8 @@
                     <span class="material-icons"> list </span>
                     <h4 class="modal-title" *ngIf="!isEdit">ADD CURRENCY</h4>
                     <h4 class="modal-title" *ngIf="isEdit">EDIT CURRENCY</h4>
-                    <img class="btn-close" (click)="popupClose()" src="../assets/img/close-icon.svg">
+                    <span class="material-icons btn-close curser-point" (click)="popupClose()"> highlight_off
+                    </span>
                 </div>
 
                 <!-- Modal body -->
