--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -1,10 +1,10 @@
 <section class="content-wrap">
   <section class="table-heading">
-    <button mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add New
-      Chain</button>
+    <app-add-button (onAdd)="openAdd()"></app-add-button>
     <div class="flex-wrap">
       <h1>Chain</h1>
     </div>
+    <app-search-box></app-search-box>
   </section>
   <section class="table-wrap">
     <table class="table table-main-head">
@@ -25,8 +25,7 @@
             <td style="width: 20%;" class="curser-point" (click)="openView(item)">{{item.ChainId}}</td>
             <td style="width: 30%;">{{item.ChainName}}</td>
             <td style="width: 30%;">
-              <span class="material-icons curser-point" (click)="openEdit(item)"> edit </span>
-              <span class="material-icons curser-point" (click)="openDelete(item)"> delete </span>
+              <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
           </tr>
         </tbody>
