--- a/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
@@ -1,9 +1,10 @@
 <section class="content-wrap">
   <section class="table-heading">
-    <button mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add New</button>
+    <app-add-button (onAdd)="openAdd()"></app-add-button>
     <div class="flex-wrap">
       <h1>Cost Center Access</h1>
     </div>
+    <app-search-box></app-search-box>
   </section>
   <section class="table-wrap">
     <table class="table table-main-head">
@@ -25,8 +26,7 @@
             <td class="curser-point" (click)="openView(item)" style="width: 30%;">
               {{item.fullaccess ==0 ?'Custom Access':'Full Access'}}</td>
             <td style="width: 20%;">
-              <span class="material-icons curser-point" (click)="openEdit(item)"> edit </span>
-              <span class="material-icons curser-point" (click)="openDelete(item)"> delete </span>
+              <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
           </tr>
         </tbody>
