--- a/src/app/featured/dashbord/component/location/location.component.html
+++ b/src/app/featured/dashbord/component/location/location.component.html
@@ -1,9 +1,10 @@
 <section class="content-wrap">
   <section class="table-heading">
-    <button class="float-right btn" mat-flat-button color="primary" (click)="openAdd()">Add New</button>
+    <app-add-button (onAdd)="openAdd()"></app-add-button>
     <div class="flex-wrap">
       <h1>Location</h1>
     </div>
+    <app-search-box></app-search-box>
   </section>
 
   <section class="table-wrap">
@@ -29,8 +30,7 @@
             <td style="width: 20%;">{{item.LocationId}}</td>
             <td style="width: 20%;">{{item.LocationName}}</td>
             <td style="width: 15%;">
-              <span class="material-icons curser-point" (click)="openEdit(item)"> edit </span>
-              <span class="material-icons curser-point" (click)="openDelete(item)"> delete </span>
+              <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
           </tr>
         </tbody>
