--- a/src/app/featured/dashbord/component/popups/add-location-popup/add-location-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-location-popup/add-location-popup.component.html
@@ -185,18 +185,12 @@
                                     </div>
                                 </div>
                                 <div class="wrap row">
-                                    <div class="col-sm-5 label">
-                                        Start Date
-                                    </div>
-                                    <div class="col-sm-7">
-                                        <div class="input-group">
-                                            <input class="form-control" placeholder="yyyy/mm/dd" type="date"
-                                                [ngClass]="{'has-error': isSubmitted && formControls.startdate.errors }"
-                                                formControlName="startdate">
-
-                                        </div>
-
-                                    </div>
+                                    <mat-form-field>
+                                        <mat-label>Choose a date</mat-label>
+                                        <input matInput [matDatepicker]="picker">
+                                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                        <mat-datepicker #picker></mat-datepicker>
+                                    </mat-form-field>
                                 </div>
                                 <div class="wrap row">
                                     <div class="col-sm-5 label">
