--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -1,9 +1,10 @@
 <section class="content-wrap">
   <section class="table-heading">
-    <button mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add New</button>
+    <app-add-button (onAdd)="openAdd()"></app-add-button>
     <div class="flex-wrap">
       <h1>User</h1>
     </div>
+    <app-search-box></app-search-box>
   </section>
 
   <section class="table-wrap">
@@ -31,8 +32,7 @@
             <td style="width: 10%;">{{item.UDID}}</td>
             <td style="width: 10%;">{{item.LoginPin}}</td>
             <td style="width: 20%;">
-              <span class="material-icons curser-point" (click)="openEdit(item)"> edit </span>
-              <span class="material-icons curser-point" (click)="openDelete(item)"> delete </span>
+              <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
           </tr>
         </tbody>
