--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -1,14 +1,12 @@
 <!--component html goes here -->
 <section class="content-wrap">
   <section class="table-heading">
-    <button class="float-right btn" mat-flat-button color="primary" (click)="openAdd()">Add New</button>
+    <app-add-button (onAdd)="openAdd()"></app-add-button>
     <div class="flex-wrap">
       <h1>User</h1>
-      <!-- <div class="form-group search-box search">
-        <input type="text" class="form-control" [ngClass]="{'loading':isSearching}" #SearchInput
-          placeholder="Search here...">
-      </div> -->
+
     </div>
+    <app-search-box></app-search-box>
   </section>
 
   <section class="table-wrap">
@@ -38,8 +36,7 @@
               {{item.status==0?'Suspended':'Active'}}
             </td>
             <td style="width: 20%;">
-              <span class="material-icons curser-point" (click)="openEdit(item)"> edit </span>
-              <span class="material-icons curser-point" (click)="openDelete(item)"> delete </span>
+              <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
           </tr>
         </tbody>
