--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -40,7 +40,7 @@
       <img src="../assets/img/logo.svg" (click)="showDashbord()" width="150" height="40" title="Home" alt="Home">
     </a>
     <div class="search-container">
-      <input type="search" aria-label="search" placeholder="Search" #SearchInput>
+      <!-- <input type="search" aria-label="search" placeholder="Search" #SearchInput> -->
     </div>
     <!--  -->
     <div class="toolbar-external-icons-container">
