--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -617,7 +617,6 @@ li.menu-active a {
 }
 .table-heading .search-box{
     width: 40%;
-    margin: 0 15px;
 }
 .table-bordered td, .table-bordered th {
     border: 1px solid #dee2e6 !important;
@@ -652,7 +651,7 @@ table.table.table-main-head {
 }
 .table tbody tr:hover td, .table tbody tr:hover th {
     background-color: #eeeeea;
-    /* border: #eeeeea; */
+    border: 1px solid rgb(157, 138, 207);
 }
 
 .table th{
@@ -1366,23 +1365,8 @@ input[type="number"]::-webkit-outer-spin-button {
     font-size: 14px
 }
 
-.mat-calendar {
-    font-family: Roboto,Helvetica Neue,sans-serif
-}
 
-.mat-calendar-body {
-    font-size: 13px
-}
 
-.mat-calendar-body-label,.mat-calendar-period-button {
-    font-size: 14px;
-    font-weight: 500
-}
-
-.mat-calendar-table-header th {
-    font-size: 11px;
-    font-weight: 400
-}
 
 .mat-dialog-title {
     font: 500 20px/32px Roboto,Helvetica Neue,sans-serif;
@@ -2641,108 +2625,6 @@ mat-footer-row,mat-header-row,mat-row,td.mat-cell,td.mat-footer-cell,th.mat-head
 
 .mat-cell,.mat-footer-cell {
     color: rgba(0,0,0,.87)
-}
-
-.mat-calendar-arrow {
-    border-top-color: rgba(0,0,0,.54)
-}
-
-.mat-datepicker-content .mat-calendar-next-button,.mat-datepicker-content .mat-calendar-previous-button,.mat-datepicker-toggle {
-    color: rgba(0,0,0,.54)
-}
-
-.mat-calendar-table-header {
-    color: rgba(0,0,0,.38)
-}
-
-.mat-calendar-table-header-divider:after {
-    background: rgba(0,0,0,.12)
-}
-
-.mat-calendar-body-label {
-    color: rgba(0,0,0,.54)
-}
-
-.mat-calendar-body-cell-content {
-    color: rgba(0,0,0,.87);
-    border-color: transparent
-}
-
-.mat-calendar-body-disabled>.mat-calendar-body-cell-content:not(.mat-calendar-body-selected) {
-    color: rgba(0,0,0,.38)
-}
-
-.cdk-keyboard-focused .mat-calendar-body-active>.mat-calendar-body-cell-content:not(.mat-calendar-body-selected),.cdk-program-focused .mat-calendar-body-active>.mat-calendar-body-cell-content:not(.mat-calendar-body-selected),.mat-calendar-body-cell:not(.mat-calendar-body-disabled):hover>.mat-calendar-body-cell-content:not(.mat-calendar-body-selected) {
-    background-color: rgba(0,0,0,.04)
-}
-
-.mat-calendar-body-today:not(.mat-calendar-body-selected) {
-    border-color: rgba(0,0,0,.38)
-}
-
-.mat-calendar-body-disabled>.mat-calendar-body-today:not(.mat-calendar-body-selected) {
-    border-color: rgba(0,0,0,.18)
-}
-
-.mat-calendar-body-selected {
-    background-color: #1976d2;
-    color: #fff
-}
-
-.mat-calendar-body-disabled>.mat-calendar-body-selected {
-    background-color: rgba(25,118,210,.4)
-}
-
-.mat-calendar-body-today.mat-calendar-body-selected {
-    box-shadow: inset 0 0 0 1px #fff
-}
-
-.mat-datepicker-content {
-    box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
-    background-color: #fff;
-    color: rgba(0,0,0,.87)
-}
-
-.mat-datepicker-content.mat-accent .mat-calendar-body-selected {
-    background-color: #d32f2f;
-    color: #fff
-}
-
-.mat-datepicker-content.mat-accent .mat-calendar-body-disabled>.mat-calendar-body-selected {
-    background-color: rgba(211,47,47,.4)
-}
-
-.mat-datepicker-content.mat-accent .mat-calendar-body-today.mat-calendar-body-selected {
-    box-shadow: inset 0 0 0 1px #fff
-}
-
-.mat-datepicker-content.mat-warn .mat-calendar-body-selected {
-    background-color: #f44336;
-    color: #fff
-}
-
-.mat-datepicker-content.mat-warn .mat-calendar-body-disabled>.mat-calendar-body-selected {
-    background-color: rgba(244,67,54,.4)
-}
-
-.mat-datepicker-content.mat-warn .mat-calendar-body-today.mat-calendar-body-selected {
-    box-shadow: inset 0 0 0 1px #fff
-}
-
-.mat-datepicker-content-touch {
-    box-shadow: 0 0 0 0 rgba(0,0,0,.2),0 0 0 0 rgba(0,0,0,.14),0 0 0 0 rgba(0,0,0,.12)
-}
-
-.mat-datepicker-toggle-active {
-    color: #1976d2
-}
-
-.mat-datepicker-toggle-active.mat-accent {
-    color: #d32f2f
-}
-
-.mat-datepicker-toggle-active.mat-warn {
-    color: #f44336
 }
 
 .mat-dialog-container {
@@ -4540,7 +4422,7 @@ div[layout=row] {
     transition: none
 }
 
-aio-nav-menu {
+.aio-nav-menu {
     display: block;
     margin: 0 auto;
     max-width: 260px;
@@ -4548,15 +4430,15 @@ aio-nav-menu {
     /* font-size: 1.3rem; */
 }
 
-aio-nav-menu a,aio-nav-menu ul {
+.aio-nav-menu a,.aio-nav-menu ul {
     margin: 0
 }
 
-aio-nav-menu:first-child {
+.aio-nav-menu:first-child {
     margin-top: 16px;
 }
 
-aio-nav-menu aio-nav-item div a {
+.aio-nav-menu .aio-nav-item div a {
     padding-left: 6px
 }
 
@@ -4616,9 +4498,6 @@ mat-sidenav-container div.mat-sidenav-content {
     text-shadow: 0 0 5px #fff;
 }
 
-.vertical-menu-item:focus {
-    outline: 2px auto #1e88e5
-}
 
 .vertical-menu-item.selected {
     color: #1976d2 !important;
@@ -4629,9 +4508,6 @@ mat-sidenav-container div.mat-sidenav-content {
     padding-bottom: 4px
 }
 
-.vertical-menu-item span {
-    /* padding-right: 32px; */
-}
 
 .vertical-menu-item .mat-icon {
     height: 24px;
@@ -7965,9 +7841,6 @@ aio-toc.embedded>div.collapsed li.secondary {
         max-width: 70px!important
     }
 }
-.vertical-menu-item:focus {
-    outline: 2px auto #1e88e5 !important;
-}
 
 .vertical-menu-item:hover {
     background-color: #dbdbdb;
@@ -7977,17 +7850,13 @@ aio-toc.embedded>div.collapsed li.secondary {
 .modal-content{
     border: 0px;
 }
+.menu-active {
+    outline: 2px auto #1e88e5 !important;
+}
 
-
-
-
-
-/* ngb-datepicker.dropdown-menu.show{
-    width:100%;
-} */
-
-
-
+.md-datepicker-calendar-pane{
+    z-index: 1200
+}
 
 
 
