--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -31,9 +31,7 @@ time, mark, audio, video {
     background:transparent;
     /* color: #444; */
 }
-/* html {
-    font-size: 62.5%;
-} */
+
 body {
     line-height:1;
 }
@@ -43,61 +41,6 @@ footer,header,hgroup,menu,nav,section {
     display:block;
 }
 
-/*  */
-/* 
-h2 {
-    font-size: 22px;
-    font-size: 2.2rem;
-    font-weight: 500;
-    margin: 32px 0 24px;
-    clear: both
-}
-
-h3 {
-    font-size: 20px;
-    font-size: 2rem;
-    margin: 24px 0 12px
-}
-
-h3,h4 {
-    font-weight: 400;
-    clear: both
-}
-
-h4 {
-    font-size: 18px;
-    font-size: 1.8rem;
-    margin: 8px 0
-}
-
-h5,h6 {
-    font-size: 16px;
-    font-size: 1.6rem;
-    font-weight: 500;
- margin: 2px 3px 2px;
-    clear: both
-}
-
-h6 {
-    color: #6e6e6e
-}
-
-h2 a,h3 a,h4 a,h5 a,h6 a {
-    font-size: inherit
-} */
-
-
-a, th, td{
-    font-size: 13px !important;
-    line-height: 20px !important;
-}
-th, td{
-    vertical-align: center;
-}
-.modal-title {
-    font-size: 14px !important;
-}
-/*  */
 nav ul {
     list-style:none;
 }
@@ -718,7 +661,7 @@ li.menu-active a {
 }
 
 .table-scroll-wrap {
-    height: 380px;
+    height: 370px;
     overflow: auto;
     /* margin-bottom: 10px;
     border-bottom: 1px solid #ddd; */
@@ -746,7 +689,8 @@ table.table.table-main-head {
 }
 .table tbody tr:hover td, .table tbody tr:hover th {
     background-color: #eeeeea;
-    border: 2px solid #03a9f438 !important;
+    border-top:  2px solid #03a9f438 !important;
+    border-bottom: 2px solid #03a9f438 !important;
 }
 
 .table th{
@@ -788,9 +732,7 @@ td.dropdown-select {
 .table-striped tbody tr:nth-of-type(even) {
     background-color: rgba(25, 118, 210, 0.08)
 }
-.table-striped tbody tr:nth-of-type(odd) td {
-    /* color: #fff; */
-}
+
 /* multiselect */
 td.dropdown-select .multi-select{
     display: none;
@@ -3578,13 +3520,10 @@ mat-footer-row,mat-header-row,mat-row,td.mat-cell,td.mat-footer-cell,th.mat-head
 }
 
 
-
 body {
     font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
     margin: 0;
     color: #444;
-    /* font-size: 14px;
-    font-size: 1.4rem; */
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -3607,6 +3546,47 @@ h1 {
     }
 }
 
+h2 {
+    font-size: 22px;
+    font-size: 2.2rem;
+    font-weight: 500;
+    margin: 32px 0 24px;
+    clear: both
+}
+
+h3 {
+    font-size: 20px;
+    font-size: 2rem;
+    margin: 24px 0 12px
+}
+
+h3,h4 {
+    font-weight: 400;
+    clear: both
+}
+
+h4 {
+    font-size: 18px;
+    font-size: 1.8rem;
+    margin: 8px 0
+}
+
+h5,h6 {
+    font-size: 16px;
+    font-size: 1.6rem;
+    font-weight: 500;
+ margin: 2px 3px 2px;
+    clear: both
+}
+
+h6 {
+    color: #6e6e6e
+}
+
+h2 a,h3 a,h4 a,h5 a,h6 a {
+    font-size: inherit
+}
+
 @media screen and (max-width: 600px) {
     h2,h3,h4,h5,h6 {
         margin:8px 0
@@ -3619,7 +3599,6 @@ h1 {
 
 a,input,li,ol,p,ul {
     font-size: 14px;
-    font-size: 1.4rem;
     line-height: 24px;
     line-height: 2.4rem;
     font-weight: 400;
@@ -3665,7 +3644,6 @@ a {
 
 .app-toolbar a {
     font-size: 16px;
-    font-size: 1.6rem;
     font-weight: 400;
     color: #fff;
     font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
@@ -3676,24 +3654,7 @@ strong {
     font-weight: 500
 }
 
-.content-wrap table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    /* margin: 12px 0 32px */
-}
 
-.content-wrap table tbody th {
-    max-width: 100px;
-    padding: 13px 32px;
-    text-align: left
-}
-
-.content-wrap td {
-    font-weight: 400;
-    padding: 8px 30px;
-    letter-spacing: .3px;
-    letter-spacing: .03rem
-}
 
 .content-wrap td>p:first-child,td ul:first-child {
     margin-top: 0
@@ -3705,7 +3666,6 @@ strong {
 
 .content-wrap th {
     font-size: 16px;
-    font-size: 1.6rem;
     font-weight: 500;
     padding: 13px 32px;
     text-align: left
@@ -3746,7 +3706,9 @@ code {
 
 .sidenav-content {
     min-height: 100vh;
-    padding: 50px 3rem 2rem
+    margin-left: 20px;
+    margin-right: 9px;
+    margin-top: 41px;
 }
 
 @media screen and (max-width: 600px) {
@@ -4537,7 +4499,7 @@ mat-sidenav-container div.mat-sidenav-content {
     align-items: center;
     justify-content: space-between;
     overflow-wrap: break-word;
-    padding: 8px;
+    /* padding: 8px; */
     text-decoration: none;
     text-align: left;
     width: 100%;
@@ -4607,7 +4569,7 @@ button.vertical-menu-item {
 
 .level-1 {
     font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
-    /* font-size: 14px; */
+    font-size: 14px;
     /* font-size: 1.4rem; */
     /* font-weight: 400; */
     padding-left: 20px;
@@ -4632,7 +4594,6 @@ button.vertical-menu-item {
     color: #6e6e6e;
     font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
     font-size: 14px;
-    font-size: 1.4rem;
     font-weight: 400;
     margin: 0;
     padding-left: 32px;
@@ -7475,12 +7436,6 @@ aio-resource-list .resource-row-link:hover {
     z-index: 5
 }
 
-.content-wrap table {
-    /* margin: 24px 0; */
-    box-shadow: 0 2px 2px rgba(10,16,20,.24),0 0 2px rgba(10,16,20,.12);
-    border-radius: 2px;
-    background: #fff
-}
 
 .content-wrap table.is-full-width {
     width: 100%
@@ -7506,23 +7461,13 @@ aio-resource-list .resource-row-link:hover {
     border-bottom: 1px solid #dbdbdb;
     color: #fff;
     font-size: 12px;
-    font-size: 1.2rem;
     font-weight: 500;
-    padding: 8px 24px;
     text-align: left;
-    text-transform: uppercase;
     line-height: 28px;
-    line-height: 2.8rem
+
 }
 
-.content-wrap table tbody>tr>td,.content-wrap table tbody>tr>th {
-    border-bottom: 1px solid #dbdbdb;
-    /* padding: 16px; */
-    text-align: left;
-    line-height: 24px;
-    line-height: 2.4rem;
-    /* vertical-align: top */
-}
+
 
 @media (max-width: 480px) {
     .content-wrap table tbody>tr>td:before,table tbody>tr>th:before {
@@ -7532,7 +7477,6 @@ aio-resource-list .resource-row-link:hover {
 
 .content-wrap table tbody>tr>td {
     letter-spacing: .3px;
-    letter-spacing: .03rem
 }
 
 @media (max-width: 480px) {
